--- a/app/src/main/res/layout/activity_preset_password_generation.xml
+++ b/app/src/main/res/layout/activity_preset_password_generation.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="de.framersoft.easypasswordgenerator.PresetPasswordGeneration"
+    android:id="@+id/linearLayout_main"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:gravity="center_horizontal"
@@ -104,6 +105,51 @@
                             android:textAlignment="textEnd" />
                     </LinearLayout>
 
+                    <TextView
+                        android:id="@+id/textView_number_of_passwords_title"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="8dp"
+                        android:layout_marginTop="8dp"
+                        android:text="@string/activity_preset_password_generation_number_of_passwords"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/linearLayout_password_length"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp" />
+
+                    <LinearLayout
+                        android:id="@+id/linearLayout_number_of_passwords"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="8dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView_number_of_passwords_title">
+
+                        <SeekBar
+                            android:id="@+id/seekBar_number_of_passwords"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:max="20"
+                            android:progress="5" />
+
+                        <TextView
+                            android:id="@+id/textView_number_of_passwords"
+                            android:layout_width="40dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="end"
+                            android:textAlignment="textEnd" />
+                    </LinearLayout>
+
                     <Button
                         android:id="@+id/button_generate_password"
                         android:layout_width="0dp"
@@ -112,7 +158,7 @@
                         android:layout_marginRight="8dp"
                         android:text="@string/activity_preset_password_generation_password_generate"
                         android:elevation="2dp"
-                        app:layout_constraintTop_toBottomOf="@+id/linearLayout_password_length"
+                        app:layout_constraintTop_toBottomOf="@+id/linearLayout_number_of_passwords"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -177,7 +223,6 @@
         android:id="@+id/adView_bottom_banner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         ads:adSize="SMART_BANNER"
         ads:adUnitId="@string/admob_ad_id">
 
