--- a/app/src/main/res/layout/activity_preset_password_generation.xml
+++ b/app/src/main/res/layout/activity_preset_password_generation.xml
@@ -1,29 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="de.framersoft.easypasswordgenerator.activities.PresetPasswordGeneration"
-    android:id="@+id/linearLayout_main"
+    android:id="@+id/drawerLayout_main"
     android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:layout_width="match_parent">
 
-    <ListView
-        android:id="@+id/listView_generated_passwords"
+    <LinearLayout
+        android:id="@+id/linearLayout_main"
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:divider="@android:color/transparent">
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
-    </ListView>
+        <ListView
+            android:id="@+id/listView_generated_passwords"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:divider="@android:color/transparent">
 
-    <com.google.android.gms.ads.AdView
-        xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/adView_bottom_banner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        ads:adSize="SMART_BANNER"
-        ads:adUnitId="@string/admob_ad_id">
+        </ListView>
 
-    </com.google.android.gms.ads.AdView>
-</LinearLayout>
+        <com.google.android.gms.ads.AdView
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adView_bottom_banner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            ads:adSize="SMART_BANNER"
+            ads:adUnitId="@string/admob_ad_id" />
+    </LinearLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigationView_drawer_navigation_container"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start">
+
+        <android.support.design.widget.NavigationView
+            android:id="@+id/navigationView_drawer_navigation"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="top"
+            app:menu="@menu/navigation_drawer_items"/>
+
+        <android.support.design.widget.NavigationView
+            android:id="@+id/navigationView_drawer_navigation_bottom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            app:menu="@menu/navigation_drawer_bottom_items" />
+
+    </android.support.design.widget.NavigationView>
+
+</android.support.v4.widget.DrawerLayout>
