switching between fragments with navigation drawer
put contents of main activity in fragment
added about us and help fragment
selecting the right item in the navigation drawer

--- a/app/src/main/res/menu/navigation_drawer_items.xml
+++ b/app/src/main/res/menu/navigation_drawer_items.xml
@@ -4,6 +4,7 @@
         <item
             android:id="@+id/nav_preset_password_generation"
             android:icon="@drawable/ic_nav_item_preset_passwords"
-            android:title="@string/nav_item_title_preset_password_generation" />
+            android:title="@string/nav_item_title_preset_password_generation"
+            android:checked="true"/>
     </group>
 </menu>
