--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="de.framersoft.easypasswordgenerator.activities.PresetPasswordGeneration"
+    tools:context="de.framersoft.easypasswordgenerator.activities.MainActivity"
     android:id="@+id/drawerLayout_main"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
@@ -15,14 +15,11 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
-        <ListView
-            android:id="@+id/listView_generated_passwords"
+        <FrameLayout
+            android:id="@+id/frameLayout_main_fragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:divider="@android:color/transparent">
-
-        </ListView>
+            android:layout_weight="1" />
 
         <com.google.android.gms.ads.AdView
             xmlns:ads="http://schemas.android.com/apk/res-auto"
