--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             ads:adSize="SMART_BANNER"
-            ads:adUnitId="@string/admob_ad_id" />
+            ads:adUnitId="@string/admob_ad_id"
+            android:visibility="gone"/>
     </LinearLayout>
 
     <android.support.design.widget.NavigationView
