--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,14 +42,18 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="top"
-            app:menu="@menu/navigation_drawer_items"/>
+            app:menu="@menu/navigation_drawer_items"
+            app:itemIconTint="@color/nav_item_color"
+            app:itemTextColor="@color/nav_item_color" />
 
         <android.support.design.widget.NavigationView
             android:id="@+id/navigationView_drawer_navigation_bottom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            app:menu="@menu/navigation_drawer_bottom_items" />
+            app:menu="@menu/navigation_drawer_bottom_items"
+            app:itemIconTint="@color/nav_item_color"
+            app:itemTextColor="@color/nav_item_color"/>
 
     </android.support.design.widget.NavigationView>
 
