--- a/app/src/main/res/layout/list_item_text_subtext.xml
+++ b/app/src/main/res/layout/list_item_text_subtext.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp">
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/textView_text"
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:textStyle="bold"
-        />
+        android:textSize="16sp"/>
 
     <TextView
         android:id="@+id/textView_subtext"
