added custom password generation fragment

--- a/app/src/main/res/layout/additional_settings_preset_password_generation.xml
+++ b/app/src/main/res/layout/additional_settings_preset_password_generation.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/activity_preset_password_generation_password_type"
-        android:textColor="?android:textColorSecondary" />
+        android:textColor="?android:textColorPrimary" />
 
     <Spinner
         android:id="@+id/spinner_password_type"
