--- a/app/src/main/res/menu/navigation_drawer_items.xml
+++ b/app/src/main/res/menu/navigation_drawer_items.xml
@@ -6,5 +6,10 @@
             android:icon="@drawable/ic_nav_item_preset_passwords"
             android:title="@string/nav_item_title_preset_password_generation"
             android:checked="true"/>
+        <item
+            android:id="@+id/nav_custom_password_generation"
+            android:icon="@drawable/ic_nav_item_custom_passwords"
+            android:title="@string/nav_item_title_custom_password_generation"
+            android:checked="true"/>
     </group>
 </menu>
