--- a/app/src/main/res/layout/list_header_preset_password_configuration.xml
+++ b/app/src/main/res/layout/list_header_preset_password_configuration.xml
@@ -76,7 +76,7 @@
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
                     android:text="@string/activity_preset_password_generation_password_length"
-                    android:textColor="?android:textColorSecondary"
+                    android:textColor="?android:textColorPrimary"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp" />
 
@@ -119,7 +119,7 @@
                     android:layout_marginRight="8dp"
                     android:layout_marginTop="16dp"
                     android:text="@string/activity_preset_password_generation_number_of_passwords"
-                    android:textColor="?android:textColorSecondary"
+                    android:textColor="?android:textColorPrimary"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp" />
 
