added checkbox to avoid similar characters

--- a/app/src/main/res/layout/additional_settings_custom_password_generation.xml
+++ b/app/src/main/res/layout/additional_settings_custom_password_generation.xml
@@ -261,6 +261,16 @@
         android:checked="true"
         />
 
+    <CheckBox
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_gravity="fill_horizontal"
+        app:layout_columnSpan="2"
+        android:id="@+id/checkBox_avoid_similar_characters"
+        android:text="@string/custom_password_avoid_similar_characters"
+        android:checked="true"
+        />
+
     <View
         android:layout_width="0dp"
         android:layout_height="0.5dp"
