--- a/app/src/main/res/layout/list_item_generated_password.xml
+++ b/app/src/main/res/layout/list_item_generated_password.xml
@@ -35,7 +35,7 @@
                 android:contentDescription="@string/content_description_copy_to_clipboard"
                 android:src="@drawable/ic_content_copy_black_24dp" />
 
-            <de.framersoft.easypasswordgenerator.view.ratingBar.RatingBarView
+            <de.framersoft.easypasswordgen.view.ratingBar.RatingBarView
                 android:id="@+id/ratingBarView_password_rating"
                 android:layout_width="8dp"
                 android:layout_height="match_parent"
