--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="de.framersoft.easypasswordgenerator.activities.MainActivity"
+    tools:context="de.framersoft.easypasswordgen.activities.MainActivity"
     android:id="@+id/drawerLayout_main"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
