--- a/app/src/main/res/layout/fragment_help_entry.xml
+++ b/app/src/main/res/layout/fragment_help_entry.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="de.framersoft.easypasswordgenerator.fragments.help.HelpEntryFragment">
+    tools:context="de.framersoft.easypasswordgen.fragments.help.HelpEntryFragment">
 
     <TextView
         android:id="@+id/textView_help_content"
